# fedora-nightly-azure-image-validation

./: .pylintrc  Containerfile  LICENSE  README.md  consume.py  fedora-messaging.toml.example  install_system_dependencies.sh  pyproject.toml  trigger_lisa.py
.github/workflows/: pylint.yml
fedora_cloud_tests/: __init__.py  azure.py  consume.py  trigger_lisa.py
fedora_cloud_tests_messages/: README.md  publish.py  pyproject.toml
fedora_cloud_tests_messages/fedora_cloud_tests_messages/: __init__.py  publish.py
fedora_cloud_tests_messages/tests/: test_publish.py
tests/: test_azure.py  test_consume.py  test_publish.py  test_trigger_lisa.py
